--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                <li><a href="index.html" aria-label="Go to the home page">HOME</a></li>
                <li><a href="gallery.html" aria-label="Go to the gallery section">GALLERY</a></li>
                <li><a href="photowalks.html" aria-label="Go to the sign up for our photography workshop">PHOTOWALKS</a></li>
-               <li><a href="photowalks.html" aria-label="Go to login page">LOGIN IN</a></li>
+               <li><a href="login.html" aria-label="Go to login page">LOGIN IN</a></li>
                
             
         </ul>
