Log in page create

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dqoovwhgm/image/upload/v1653440170/code_institute_first_project/slider/brutalist-arch-favicon_pbjt1q.png">
     <title>Brutalist Architecture in Ireland. Architectural photowalks. </title>
+    <script defer src="assets/js/script.js"></script>
 
 </head>
 
