--- a/photowalks.html
+++ b/photowalks.html
@@ -23,7 +23,8 @@
 <li><a href="index.html" aria-label="Go to the home page">HOME</a></li>
 <li><a href="gallery.html" aria-label="Go to the gallery section">GALLERY</a></li>
 <li><a href="photowalks.html" aria-label="Go to the sign up for our photography workshop">PHOTOWALKS</a></li>
-               </ul></nav>
+<li><a href="login.html" aria-label="Go to login page">LOGIN IN</a></li>     
+</ul></nav>
 
     <figure>
         <img src="https://res.cloudinary.com/dqoovwhgm/image/upload/v1652978585/code_institute_first_project/slider/banner_photowalks_z6pktq.jpg" 
