Buttons re-design, readme update

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="desription" content="Weather app is designed specifically for hikers, providing them with up-to-date weather information to help plan their adventure.">
     <meta name="keywords" content="weather, ireland, mountains, hiking">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dqoovwhgm/image/upload/v1675772060/hiking%20weather%20app%20-%20project%204/logo_true_peak_circle_b0n30j.png">
+    <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dqoovwhgm/image/upload/v1675772427/hiking%20weather%20app%20-%20project%204/logo_true_peak_favicon_hldqih.jpg">
     <title>True Peak - weather for hikers </title>
     <script defer src="assets/js/script.js"></script>
 
