Register and logi pages add, logo add on the top

--- a/login.html
+++ b/login.html
@@ -15,24 +15,10 @@
 
 </head>
 
-<body>
 
-  <div class="logo-container">
-
-    <img src="https://res.cloudinary.com/dqoovwhgm/image/upload/v1675813856/hiking%20weather%20app%20-%20project%204/logo_true_peak_circle_gradient_riijxe.png" alt="True Peak Logo">
-  </div>
-  <div class="buttons-container">
-    <button class="login-button">
-      <a href="login.html">Login</a>
-    </button>
-    <button class="register-button">
-      <a href="register.html">Register</a>
-    </button>
-    <div class="circle circle1"></div>
-
-  </div>      
-              
-            
-</body>
-
-</html>
+    <body>
+        <div class="logo-container-login">
+            <img src="https://res.cloudinary.com/dqoovwhgm/image/upload/v1675862077/hiking%20weather%20app%20-%20project%204/logo_true_peak_banner_login_page_1_y4ooow.png" alt="Logo login page">
+          </div>
+        <h1>LOGIN</h1>
+    </body>
