--- a/login.html
+++ b/login.html
@@ -21,4 +21,20 @@
             <img src="https://res.cloudinary.com/dqoovwhgm/image/upload/v1675862077/hiking%20weather%20app%20-%20project%204/logo_true_peak_banner_login_page_1_y4ooow.png" alt="Logo login page">
           </div>
         <h1>LOGIN</h1>
+
+        <form>
+            <div class="form-group">
+              <label for="email">E-mail/Username:</label>
+              <input type="email" class="form-control" id="email">
+            </div>
+            <div class="form-group">
+              <label for="password">Password:</label>
+              <input type="password" class="form-control" id="password">
+            </div>
+            <div class="form-group form-check">
+              <input type="checkbox" class="form-check-input" id="remember-me">
+              <label class="form-check-label" for="remember-me">Remember me on this device</label>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>   
     </body>
