--- a/login.html
+++ b/login.html
@@ -18,23 +18,27 @@
 
     <body>
         <div class="logo-container-login">
-            <img src="https://res.cloudinary.com/dqoovwhgm/image/upload/v1675862077/hiking%20weather%20app%20-%20project%204/logo_true_peak_banner_login_page_1_y4ooow.png" alt="Logo login page">
+          <a href="index.html"><img src="https://res.cloudinary.com/dqoovwhgm/image/upload/v1675862077/hiking%20weather%20app%20-%20project%204/logo_true_peak_banner_login_page_1_y4ooow.png" alt="Logo login page"></a>
           </div>
         <h1>LOGIN</h1>
 
         <form>
             <div class="form-group">
-              <label for="email">E-mail/Username:</label>
-              <input type="email" class="form-control" id="email">
+              <label for="email">Email / Username:</label>
+              <input type="email" class="form-control" id="email" placeholder="Your e-mail">
             </div>
             <div class="form-group">
               <label for="password">Password:</label>
-              <input type="password" class="form-control" id="password">
+              <input type="password" class="form-control" id="password" placeholder="Password">
+              <label><input type="checkbox" onclick="togglePasswordVisibility()"> Show password
+              </label>
+             
+             
             </div>
             <div class="form-group form-check">
               <input type="checkbox" class="form-check-input" id="remember-me">
               <label class="form-check-label" for="remember-me">Remember me on this device</label>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn-primary">Login</button>
           </form>   
     </body>
