--- a/register.html
+++ b/register.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="logo-container-login">
-        <img src="https://res.cloudinary.com/dqoovwhgm/image/upload/v1675862077/hiking%20weather%20app%20-%20project%204/logo_true_peak_banner_login_page_1_y4ooow.png" alt="Logo login page">
+     <a href="index.html"><img src="https://res.cloudinary.com/dqoovwhgm/image/upload/v1675862077/hiking%20weather%20app%20-%20project%204/logo_true_peak_banner_login_page_1_y4ooow.png" alt="Logo login page"></a>
       </div>
     <h1>
         REGISTER
