--- a/login.html
+++ b/login.html
@@ -25,20 +25,20 @@
         <form>
             <div class="form-group">
               <label for="email">Email / Username:</label>
-              <input type="email" class="form-control" id="email" placeholder="Your e-mail">
+              <input type="email" class="form-control" id="email" placeholder="Your e-mail" required autocomplete="on">
             </div>
             <div class="form-group">
               <label for="password">Password:</label>
-              <input type="password" class="form-control" id="password" placeholder="Password">
+              <input type="password" class="form-control" id="password" placeholder="Password" required autocomplete="on">
               <label><input type="checkbox" onclick="togglePasswordVisibility()"> Show password
               </label>
              
              
             </div>
-            <div class="form-group form-check">
+           <!-- <div class="form-group form-check">
               <input type="checkbox" class="form-check-input" id="remember-me">
               <label class="form-check-label" for="remember-me">Remember me on this device</label>
-            </div>
+            </div>-->
             <button type="submit" class="btn-primary">Login</button>
           </form>   
     </body>
