json file create. CSS for welcome page update

--- a/register.html
+++ b/register.html
@@ -34,7 +34,7 @@
         <div class="form-group">
           <label for="password">Password:</label>
           <input type="password" class="form-control" id="password" placeholder="Password" pattern=".{5,}" title="At least 5 characters long" required>
-          <label><input type="checkbox" onclick="togglePasswordVisibility()"> Show password
+          <br><label><input type="checkbox" onclick="togglePasswordVisibility()"> Show password
           </label>
          
          
