--- a/welcome.html
+++ b/welcome.html
@@ -23,9 +23,9 @@
         <h1 id="welcomeMessage">Welcome Back</h1>
 
       
-          <button class="btn-primary">Map</button>
-          <button class="btn-primary">Mountain Name</button>
-          <button class="btn-primary">Contribute</button>
+          <button class="btn-primary-welcome">Map</button>
+          <button class="btn-primary-welcome">Mountain Name</button>
+          <button class="btn-primary-welcome">Contribute</button>
         </div>  
     </body>
     <script src="js/script.js"></script>
